Revise hero section with new description and info
Updated hero section with new content and structure.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,29 @@
 <div class="background-animation"></div>
 
 <section class="hero">
-    <div class="hero-content">
-        <h1 class="glow-text">C. Vincy</h1>
-        <h3>M.Sc Physics Student</h3>
-        <p>Exploring the universe through Physics and challenges.</p>
-        <a href="#about" class="btn">Explore More</a>
-    </div>
 
     <div class="hero-image">
-        <img src="vincy.jpg" alt="C. Vincy">
+        <img src="vincy.jpg" alt="Profile Image">
+    </div>
+
+    <div class="hero-content">
+        <h1 class="glow-text">C. Vincy</h1>
+        <h2>M.Sc Physics Student</h2>
+
+        <p class="hero-description">
+            A passionate physics learner exploring the mysteries of the universe.
+            Interested in scientific thinking, problem solving, and embracing
+            intellectual challenges that push boundaries.
+        </p>
+
+        <div class="hero-info">
+            <span>📍 Kalpakkam, Tamil Nadu</span>
+            <span>🌐 English | Tamil</span>
+            <span>📧 vincychelladurai2004@gmail.com</span>
+        </div>
     </div>
 </section>
+
 
 <section id="about" class="section">
     <h2>About Me</h2>
