Introduce 'About Me' section in index.html
Added 'About Me' section with academic journey, interests, and mindset.

--- a/index.html
+++ b/index.html
@@ -46,23 +46,38 @@
     </p>
 </section>
 
-<section class="section">
-    <h2>Education</h2>
-    <div class="card">
-        <h3>M.Sc Physics</h3>
-        <p>Madras Christian College (Ongoing)</p>
-    </div>
+<section id="about" class="section">
+    <h2>About Me</h2>
 
-    <div class="card">
-        <h3>B.Sc Physics</h3>
-        <p>Rajeshwari Vedachalam Govt Arts & Science College</p>
-    </div>
+    <div class="about-container">
+        <div class="about-card">
+            <h3>Academic Journey</h3>
+            <p>
+                Currently pursuing M.Sc Physics at Madras Christian College.
+                Completed B.Sc Physics with strong foundation in classical mechanics,
+                electromagnetism and modern physics.
+            </p>
+        </div>
 
-    <div class="card">
-        <h3>HSC</h3>
-        <p>Infant Jesus Matric Higher Secondary School (2022)</p>
+        <div class="about-card">
+            <h3>Interests</h3>
+            <p>
+                Fascinated by astrophysics, quantum mechanics and scientific
+                exploration. Always eager to understand deeper concepts
+                and apply analytical thinking.
+            </p>
+        </div>
+
+        <div class="about-card">
+            <h3>Mindset</h3>
+            <p>
+                A challenge-driven learner who believes growth happens
+                outside the comfort zone. Dedicated, curious and determined.
+            </p>
+        </div>
     </div>
 </section>
+
 
 <section class="section">
     <h2>Skills</h2>
