Revise skills section to highlight core competencies
Updated skills section to include core skills and descriptions.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,25 @@
 
 
 <section class="section">
-    <h2>Skills</h2>
-    <div class="skills">
-        <span>Accepting Challenges</span>
-        <span>Basic C Programming</span>
+    <h2>Core Skills</h2>
+
+    <div class="skills-container">
+
+        <div class="skill-box">
+            <h3>Problem Solving</h3>
+            <p>Strong analytical thinking and logical reasoning ability.</p>
+        </div>
+
+        <div class="skill-box">
+            <h3>Programming</h3>
+            <p>Basic C Programming and computational thinking.</p>
+        </div>
+
+        <div class="skill-box">
+            <h3>Adaptability</h3>
+            <p>Quick learner who adapts to new environments and challenges.</p>
+        </div>
+
     </div>
     <section class="section" id="science">
     <h2>Physics Curiosities</h2>
