Enhance 'About Me' section with more details
Expanded the 'About Me' section with detailed information about academic background, interests, and strengths.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,58 @@
 </section>
 
 
-<section id="about" class="section">
+<section id="about" class="section about-section">
     <h2>About Me</h2>
-    <p>
-        I am currently pursuing M.Sc Physics at Madras Christian College.
-        Passionate about learning, research and accepting new challenges.
-    </p>
+
+    <div class="about-wrapper">
+
+        <div class="about-text">
+            <p>
+                I am currently pursuing M.Sc Physics at Madras Christian College,
+                building a deeper understanding of theoretical and applied physics.
+                My academic journey began with a strong foundation in classical
+                mechanics, electromagnetism and modern physics during my B.Sc.
+            </p>
+
+            <p>
+                My curiosity lies in understanding how the universe operates —
+                from quantum level phenomena to large-scale cosmic structures.
+                I enjoy analyzing complex ideas, breaking them into understandable
+                components and approaching problems with logical reasoning.
+            </p>
+
+            <p>
+                Beyond academics, I strongly believe in accepting challenges
+                as opportunities for growth. I am disciplined, adaptable and
+                continuously striving to expand my scientific thinking.
+            </p>
+        </div>
+
+        <div class="about-highlights">
+            <div class="highlight-box">
+                <h3>Education</h3>
+                <p>M.Sc Physics – Ongoing</p>
+                <p>B.Sc Physics – Completed</p>
+            </div>
+
+            <div class="highlight-box">
+                <h3>Interests</h3>
+                <p>Astrophysics</p>
+                <p>Quantum Mechanics</p>
+                <p>Scientific Research</p>
+            </div>
+
+            <div class="highlight-box">
+                <h3>Strength</h3>
+                <p>Analytical Thinking</p>
+                <p>Problem Solving</p>
+                <p>Adaptability</p>
+            </div>
+        </div>
+
+    </div>
 </section>
+
 
 <section id="about" class="section">
     <h2>About Me</h2>
