--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                 as opportunities for growth. I am disciplined, adaptable and
                 continuously striving to expand my scientific thinking.
             </p>            
+   </div>
+</section>
 
+
+<section id="about" class="section">
     <div class="about-container">
         <div class="about-card">
             <h3>Academic Journey</h3>
